Add mathematics category to Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ description = "Implementation of astro-float for nalgebra"
 keywords = ["bigfloat","nalgebra","arbitrary-precision","numeric","float"]
 readme = "README.md"
 repository = "https://github.com/benjamin-cates/astro_nalgebra"
+categories = ["mathematics"]
 
 
 
